--- a/package.json
+++ b/package.json
@@ -1,37 +1,21 @@
 {
-  "name": "BootstrapAngularAdminWebApp",
-  "version": "2.0.1",
-  "description": "Admin web application template with Bootstrap 3 and AngularJS.",
+  "name": "cocclanmanager",
+  "version": "1.0.0",
+  "description": "",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node node_modules/http-server/bin/http-server -o"
   },
-  "keywords": [
-    "AngularJS",
-    "admin",
-    "admin",
-    "dashboard",
-    "admin",
-    "panel",
-    "app",
-    "charts",
-    "components",
-    "flat",
-    "flat",
-    "ui",
-    "responsive",
-    "responsive",
-    "layout",
-    "ui",
-    "kit",
-    "ui",
-    "route",
-    "web",
-    "app",
-    "widgets"
-  ],
-  "repository": "https://heyflat@bitbucket.org/heyflat/angulr.git",
-  "author": "Flatfull",
-  "license": "Envato REGULAR LICENSE",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rikarsen/coc.git"
+  },
+  "author": "Arsen Babajanyan",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/rikarsen/coc/issues"
+  },
+  "homepage": "https://github.com/rikarsen/coc#readme",
   "dependencies": {},
   "devDependencies": {
     "grunt": "^0.4.5",
